Add black floor

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 position="-0.1 -0.4 0"></a-text>
         </a-entity>
 
-        <a-box color="grey" position="0 0 -4"></a-box>
+        <a-plane color="black" rotation="-90" scale="40 40 40"></a-plane>
+
+        <a-box color="grey" position="0 0.5 -4"></a-box>
 
         <a-entity id="head" wasd-controls mouse-controls look-controls cursor="rayOrigin: mouse" position="0 1.6 0">
         </a-entity>
