--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hello!</title>
+    <title>WebXR Portugal</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,10 +30,6 @@
             <a-text id="header-subtitle" value="The immersive web-community of Portugal" color="#ffffff" width="3"
                 position="-0.1 -0.4 0"></a-text>
         </a-entity>
-
-        <a-plane color="black" rotation="-90" scale="40 40 40"></a-plane>
-
-        <a-box color="grey" position="0 0.5 -4"></a-box>
 
         <a-entity id="head" wasd-controls mouse-controls look-controls cursor="rayOrigin: mouse" position="0 1.6 0">
         </a-entity>
